# LRSMT

./: .build_owner_docker.sh.swp  .gitignore  1-install_dependencies.bash  5-install_docker.bash  6-_docker_image.bash  README.md  build_owner_docker.sh  login_and_pull.bash  owner-Dockerfile  pull_docker_image.bash  quick_docker_run.sh
.github/workflows/: cmake.yml
agiletaur/install/: local_setup.sh  setup.sh
agiletaur/log/: latest_build
agiletaur/src/agiletaur_controller/: CMakeLists.txt
agiletaur/src/agiletaur_controller/include/: main.h
agiletaur/src/agiletaur_controller/include/controller/: basecontroller.h
agiletaur/src/agiletaur_controller/include/proxy/: lowerproxy.h
agiletaur/src/agiletaur_controller/lib/: agiletaur_controller
agiletaur/src/agiletaur_controller/src/: main.cpp
agiletaur/src/agiletaur_controller/src/controller/: controller_monitor.cpp
agiletaur/src/agiletaur_controller/src/proxy/: lowerproxy.cpp  upperproxy.cpp
agiletaur/src/agiletaur_launcher/: CMakeLists.txt
agiletaur/src/install/: local_setup.sh  setup.sh
agiletaur/src/log/: latest_build
controllers/agiletaur/: UpgradeLog.htm  moco8_vs.cpp  moco8_vs.vcxproj  moco8_vs.vcxproj.filter
controllers/agiletaur/Data/: file2.txt  file3.txt
controllers/agiletaur/gait_src/: climb.cpp  pronk.cpp  self_right.cpp  stand.cpp
controllers/agiletaur/include_vmc/: force_dis8_types.h  ground_att_est_n.h
controllers/agiletaur/locomotion_src/: hardware_interface.cpp  state_estimator.cpp
controllers/agiletaur/math_src/: RT_math.cpp
controllers/agiletaur/source/: wbInterface.cpp
controllers/single_leg/: single_leg.py  test.py
env_build/: .install_dependencies.sh.swp  install_eigen.sh  install_qp.sh
env_setup/: 0-Download_dependencies.bash  1-install_docker.bash  2-pull_docker_image.bash  3-build_owner_docker.sh  owner-Dockerfile
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
simulation_assets/Maps/: .Map1_with_obstacle_upstairs.wbproj  Map1_with_obstacle_upstairs.wbt
simulation_assets/controllers/agiletaur/: moco8_vs.aps
simulation_assets/controllers/agiletaurcontroller/: .CMakeLists.txt.swp  CMakeLists.txt  readme.md
simulation_assets/controllers/agiletaurcontroller/include/config/: config_parser.h
simulation_assets/controllers/agiletaurcontroller/include/controller/: controller_monitor.h
simulation_assets/controllers/agiletaurcontroller/include/proxy/: lowerproxy.h  upperproxy.h
simulation_assets/controllers/agiletaurcontroller/src/: main.cpp
simulation_assets/controllers/agiletaurcontroller/src/config/: config_parser.cpp
simulation_assets/controllers/agiletaurcontroller/src/proxy/: lowerproxy.cpp  upperproxy.cpp
simulation_assets/controllers/test_qp/: .test_qp.cpp.swp  CMakeLists.txt
simulation_assets/protos/: tinytaur.proto
simulation_assets/wbo/: agiletaur2.wbo
simulation_assets/worlds/: .agiletaur.wbproj  agiletaur.wbt  tinytaur.wbt
wbo/: agiletaur.wbo  newtaur.wbo
worlds/: .agiletaur.wbproj  .newtaur.wbproj  .test_demo.wbproj  agiletaur.wbo  agiletaur.wbt
(+316 files in other folders)
